// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditSettings Renders the component when loading, with no axe violations 1`] = `
<div>
  <h2>
    settings.title
  </h2>
  <form
    data-testid="settings-form"
  >
    <label>
      Nightscout URL
      <input
        data-testid="settings-form-field-url"
        name="nightscoutUrl"
        value="a value"
      />
    </label>
    <br />
    <label>
      Nightscout Token
      <input
        data-testid="settings-form-field-token"
        name="nightscoutToken"
        value="a value"
      />
    </label>
    <br />
    <label>
      Glucose Units
      <select
        data-testid="settings-form-field-bg"
        name="glucoseUnit"
      >
        <option
          id="mg/dl"
        >
          mg/dl
        </option>
        <option
          id="mmol/L"
        >
          mmol/L
        </option>
      </select>
    </label>
    <br />
    <button
      data-testid="settings-form-submit"
      disabled=""
      type="submit"
    >
      Save Settings
    </button>
  </form>
</div>
`;

exports[`EditSettings Renders the component when loading, with no axe violations 2`] = `
<div>
  <h2>
    settings.title
  </h2>
  Loading stuff!
</div>
`;

exports[`EditSettings Renders the component with error, with no axe violations 1`] = `
<div>
  <h2>
    settings.title
  </h2>
  Something has gone horribly wrong: 
  you blew it
</div>
`;
